# circomkit-rs

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
src/: error.rs  lib.rs  types.rs
src/core/: circomkit.rs  config.rs  mod.rs
src/testers/: mod.rs  proof.rs  witness.rs
src/tests/: circuits.rs  mod.rs  testing.rs
src/utils/: eddsa.rs  mod.rs  ptau.rs  signals.rs
