[package]
name = "circomkit-rs"
version = "0.1.0"
edition = "2024"
authors = ["Rajesh"]
description = "A Circom testing & development environment for Rust"
license = "MIT"
repository = "https://github.com/RajesRk18/circomkit-rs"
keywords = ["circom", "zero-knowledge", "snark", "zk-proofs", "cryptography"]
categories = ["cryptography", "development-tools::testing"]

[lib]
name = "circomkit"
path = "src/lib.rs"

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# File system utilities
tempfile = "3.10"
walkdir = "2.5"

# Logging
log = "0.4"
env_logger = "0.11"

# Command execution
which = "6.0"

# Path handling
directories = "5.0"

# Hash utilities
sha2 = "0.10"
hex = "0.4"

# EdDSA BabyJubJub for testing circomlib circuits
babyjubjub-rs = "0.0.11"
num-bigint = "0.4"
ff_ce = "0.11"

[dev-dependencies]
tokio-test = "0.4"
pretty_assertions = "1.4"

[features]
default = []
full = ["witness-gen", "proof-gen"]
witness-gen = []
proof-gen = []
